fix blue button outline on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,8 @@ h3 {
 button {
     font-family: 'Fira Mono', monospace;
     line-height: 100%;
-    border: 4px solid;
+    border: 4px solid black;
+    color: black;
     border-radius: 8px;
     padding: 12px 10px 10px 10px;
     cursor: pointer;
